--- a/configuration.yaml
+++ b/configuration.yaml
@@ -116,7 +116,7 @@ group: !include_dir_merge_named groups
 input_boolean: !include inputs/boolean.yaml
 input_datetime: !include inputs/datetime.yaml
 input_text: !include inputs/text.yaml
-ios: !include ios.yaml
+ios: #!include ios.yaml
 light: !include_dir_merge_list lights
 media_player: !include_dir_merge_list media_player
 scene: !include_dir_merge_list scene
