--- a/ios.yaml
+++ b/ios.yaml
@@ -1,5 +1,20 @@
 push:
   categories:
+    - name: Alarm
+      identifier: 'alarm'
+      actions:
+        - identifier: 'SOUND_ALARM'
+          title: 'Alarm aktivieren'
+          activationMode: 'background'
+          authenticationRequired: yes
+          destructive: yes
+          behavior: 'default'
+        - identifier: 'IGNORE'
+          title: 'Ignorieren'
+          activationMode: 'background'
+          authenticationRequired: no
+          destructive: no
+          behavior: 'default'
     - name: Klingel
       identifier: 'klingel'
       actions:
@@ -11,3 +26,7 @@ push:
           behavior: 'default'
         - identifier: 'IGNORE'
           title: 'Ignorieren'
+          activationMode: 'background'
+          authenticationRequired: no
+          destructive: no
+          behavior: 'default'
