--- a/automations/kueche.yaml
+++ b/automations/kueche.yaml
@@ -26,7 +26,7 @@
     entity_id: binary_sensor.motion_sensor_158d00012326f7
     to: 'off'
     for:
-      minutes: 10
+      minutes: 5
   condition:
     - condition: state
       entity_id: input_boolean.motion_sensor_kueche_aktiv
@@ -35,20 +35,20 @@
     service: homeassistant.turn_off
     entity_id: switch.beleuchtung_kueche
 
-- alias: kueche_movement_ambiente_off
-  trigger:
-    platform: state
-    entity_id: binary_sensor.motion_sensor_158d00012326f7
-    to: 'off'
-    for:
-      minutes: 30
-  condition:
-    - condition: state
-      entity_id: input_boolean.motion_sensor_kueche_aktiv
-      state: 'on'
-  action:
-    service: homeassistant.turn_off
-    entity_id: switch.rf_kueche2
+# - alias: kueche_movement_ambiente_off
+#   trigger:
+#     platform: state
+#     entity_id: binary_sensor.motion_sensor_158d00012326f7
+#     to: 'off'
+#     for:
+#       minutes: 30
+#   condition:
+#     - condition: state
+#       entity_id: input_boolean.motion_sensor_kueche_aktiv
+#       state: 'on'
+#   action:
+#     service: homeassistant.turn_off
+#     entity_id: switch.rf_kueche2
 
 - alias: kueche_movement_volumio_on
   trigger:
@@ -62,7 +62,7 @@
         conditions:
           - condition: time
             after: '06:00:00'
-            before: '08:00:00'
+            before: '09:00:00'
             weekday:
               - mon
               - tue
