--- a/automations/flur_motion.yaml
+++ b/automations/flur_motion.yaml
@@ -33,7 +33,7 @@
     entity_id: binary_sensor.motion_sensor_158d0001e562ad
     to: 'off'
     for:
-      hours: 1
+      minutes: 30
   condition:
     - condition: state
       entity_id: input_boolean.motion_sensor_flur_aktiv
