hw volumio switch

--- a/automations/kueche.yaml
+++ b/automations/kueche.yaml
@@ -13,9 +13,6 @@
         entity_id: sun.sun
         value_template: '{{ state.attributes.elevation }}'
         below: 12
-      - condition: state
-        entity_id: switch.rf_kueche2
-        state: 'off'
   action:
     service: homeassistant.turn_on
     entity_id: switch.beleuchtung_kueche
@@ -34,21 +31,6 @@
   action:
     service: homeassistant.turn_off
     entity_id: switch.beleuchtung_kueche
-
-# - alias: kueche_movement_ambiente_off
-#   trigger:
-#     platform: state
-#     entity_id: binary_sensor.motion_sensor_158d00012326f7
-#     to: 'off'
-#     for:
-#       minutes: 30
-#   condition:
-#     - condition: state
-#       entity_id: input_boolean.motion_sensor_kueche_aktiv
-#       state: 'on'
-#   action:
-#     service: homeassistant.turn_off
-#     entity_id: switch.rf_kueche2
 
 - alias: kueche_movement_volumio_on
   trigger:
@@ -82,3 +64,11 @@
           hours: 1
   action:
     service: script.volumio_play
+
+- alias: kueche_volumio_hw_switch
+  trigger:
+    platform: state
+    entity_id: switch.rf_kueche2
+  action:
+    service: switch.toggle
+    entity_id: switch.volumio_kueche
