--- a/groups/views.yaml
+++ b/groups/views.yaml
@@ -48,6 +48,8 @@ garten_view:
   icon: mdi:pool
   entities:
     - group.pool
+    - history_graph.pool_temperatur
+    - group.pool_timer
 
 settings_view:
   name: Einstellungen
