--- a/packages/pool.yaml
+++ b/packages/pool.yaml
@@ -10,16 +10,16 @@ homeassistant:
 sensor:
   - platform: mqtt
     name: pool_temperatur
-    availability_topic: "tele/garden/pool/LWT"
-    payload_available: "Online"
-    payload_not_available: "Offline"
+    # availability_topic: "tele/garden/pool/LWT"
+    # payload_available: "Online"
+    # payload_not_available: "Offline"
     state_topic: "tele/garden/pool/SENSOR"
     unit_of_measurement: "°C"
     expire_after: 600
     value_template: "{{ value_json.DS18B20.Temperature }}"
-    json_attributes:
-      - DS18B20
-      - Temperature
+    # json_attributes:
+    #   - DS18B20
+    #   - Temperature
 
 history_graph:
   pool:
@@ -39,6 +39,7 @@ group:
       - switch.pool
 
   pool_timer:
+    name: Timer Filterpumpe
     control: hidden
     entities:
       - input_boolean.pool_timer_aktiv
