--- a/groups/zuhause.yaml
+++ b/groups/zuhause.yaml
@@ -2,13 +2,13 @@ person_dennis:
   name: Dennis
   entities:
     - device_tracker.dennis_iphone # Tado
-    - device_tracker.iphonevondennis # Unifi
+    - device_tracker.iphone_von_dennis # Unifi
 
 person_mary:
   name: Mary
   entities:
     - device_tracker.marys_iphone # Tado
-    - device_tracker.iphonevonmary # Unifi
+    - device_tracker.iphone_von_mary # Unifi
 
 familie:
   entities:
