--- a/groups/views.yaml
+++ b/groups/views.yaml
@@ -28,10 +28,11 @@ media_view:
   view: yes
   icon: mdi:television
   entities:
+    - sensor.nzbget
     - group.emby
     - media_player.lg_tv
     - media_player.volumio
-    - media_player.volumio_mpd
+    # - media_player.volumio_mpd
     - media_player.playstation_4
 
 cameras_view:
