--- a/travis_secrets.yaml
+++ b/travis_secrets.yaml
@@ -6,6 +6,8 @@ LG_TV_ACCESS_TOKEN: 00000000000000000000
 MQTT_CLIENT_ID: homeassistant-1
 MQTT_PASSWORD: 00000000000000000000
 MQTT_USERNAME: user
+NZBGET_PASSWORD: password
+NZBGET_USERNAME: user
 SLACK_API_KEY: '00000000000000000000'
 TADO_HOME_ID: 00000000000000000000
 TADO_PASSWORD: 00000000000000000000
