--- a/customize.yaml
+++ b/customize.yaml
@@ -26,6 +26,8 @@ light.gateway_light_286c0788a9dd:
   friendly_name: Gateway Licht
   icon: 'mdi:lightbulb-on-outline'
   state_card_mode: single-line
+switch.lichtkugel:
+  icon: 'mdi:lightbulb-on-outline'
 
 # Xiaomi Sensoren
 binary_sensor.motion_sensor_158d000113dee1:
