--- a/configuration.yaml
+++ b/configuration.yaml
@@ -34,13 +34,11 @@ customizer:
 
 config:
 history:
-homekit:
 logbook:
 map:
 sun:
 updater:
 
-# Example configuration.yaml entry with exclude
 recorder:
   purge_keep_days: 7
   db_url: mysql://homeassistant@192.168.10.95/homeassistant?charset=utf8
@@ -122,6 +120,7 @@ binary_sensor: !include_dir_merge_list binary_sensor
 device_tracker: !include_dir_merge_list device_tracker
 emulated_hue: !include emulated_hue.yaml
 group: !include_dir_merge_named groups
+homekit: !include homekit.yaml
 input_text: !include inputs/text.yaml
 ios: !include ios.yaml
 light: !include_dir_merge_list lights
