--- a/configuration.yaml
+++ b/configuration.yaml
@@ -32,12 +32,18 @@ http:
 customizer:
   custom_ui: local
 
+
 config:
+ffmpeg:
 history:
 logbook:
 map:
 sun:
 updater:
+
+ring:
+  username: !secret RING_USERNAME
+  password: !secret RING_PASSWORD
 
 recorder:
   purge_keep_days: 7
@@ -88,6 +94,9 @@ camera:
   - platform: ffmpeg
     name: camera_hof
     input: -rtsp_transport tcp -i rtsp://192.168.10.115/unicast
+  - platform: ring
+    name: ring
+    ffmpeg_arguments: -pred 1 -q:v 2
   # - platform: mjpeg
   #   name: camera_hof
   #   mjpeg_url: rtsp://192.168.10.115/unicast
