add fake secrets

--- a/travis_secrets.yaml
+++ b/travis_secrets.yaml
@@ -8,6 +8,8 @@ MQTT_PASSWORD: 00000000000000000000
 MQTT_USERNAME: user
 NZBGET_PASSWORD: password
 NZBGET_USERNAME: user
+RING_PASSWORD: password
+RING_USERNAME: user
 SLACK_API_KEY: '00000000000000000000'
 TADO_HOME_ID: 00000000000000000000
 TADO_PASSWORD: 00000000000000000000
