--- a/groups/views.yaml
+++ b/groups/views.yaml
@@ -31,6 +31,7 @@ cameras_view:
   view: yes
   icon: mdi:camcorder
   entities:
+    - camera.ring
     - camera.arthur_cam
     - camera.camera_hof
 
